--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
   </head>
   <body>
     </h1>IoT Digital Farm<h1>
-    </p>test web 1216456<p>
+    </p>Now we can deployed<p>
   </body>
 </html>
