--- a/index.html
+++ b/index.html
@@ -19,10 +19,46 @@
 
  
     <link href="carousel.css" rel="stylesheet">
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-firestore.js"></script>
+
+    
   </head>
+
   <body>
     </h1>IoT Digital Farm<h1>
     </p>Now we can deployed<p>
-      <p>Alpha has came</p>
+    <p>Alpha has came</p>
+    <div class="container">
+      <h1>Devices</h1>
+      <ul id="deviceList">
+
+      </ul>
+    </div>
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+      https://firebase.google.com/docs/web/setup#available-libraries -->
+      <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-analytics.js"></script>
+
+    <script>
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      var firebaseConfig = {
+        apiKey: "AIzaSyB5zraDdpuRbVhHC0pekc9hKrKfteX0ncE",
+        authDomain: "digital-farming-52edb.firebaseapp.com",
+        projectId: "digital-farming-52edb",
+        storageBucket: "digital-farming-52edb.appspot.com",
+        messagingSenderId: "1054001690174",
+        appId: "1:1054001690174:web:8a665041773bc078c1436f",
+        measurementId: "G-WYRKFCRBYV"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+      firebase.analytics();
+      const db = firebase.firestore();
+    </script>
+
+    <script src="js/index.js"></script>
+
   </body>
 </html>
