--- a/index.html
+++ b/index.html
@@ -21,10 +21,22 @@
     <link href="carousel.css" rel="stylesheet">
   </head>
   <body>
-    </h1>IoT Digital Farm<h1>
+    <h1>IoT Digital Farm</h1>
 
-    </p>Now we can deployed<p>
-      <p>Alpha has came</p>
+    <p>Now we can deployed</p>
+    <p>Alpha has came</p>
+
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="/__/firebase/8.4.3/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+        https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="/__/firebase/8.4.3/firebase-analytics.js"></script>
+
+    <!-- Initialize Firebase -->
+    <script src="/__/firebase/init.js"></script>
+
 
   </body>
 </html>
