--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   </head>
 
   <body>
+    <!-- Navigation Bar -->
     <div class="topnav" id="myTopnav">
       <a href="#logo" id="logoLink"><img src="img/aerog-logo.png" alt="Aero Group 1992 Logo" id="logo"></a>
       <a href="#home" id="digiFarming">IoT Digital Farming</a>
@@ -43,6 +44,7 @@
       </a>
     </div>
     
+    <!-- Main Container -->
     <div class="container">
       <div class="head-con">
         <div class="head-con-text" style="padding-left: 0;">3 Devices</div>
@@ -62,24 +64,17 @@
         </div>
         <div class="temp-con">
           <div class="temp-text">
-            <p>Temperature</p>
-            <div class="temp-value-box">
-              <i class="fas fa-thermometer-half"></i>
-              <div>32.5 C</div>
-            </div>
+            <p class="temp-title">Temperature</p>
+            <p class="temp"><i class="fas fa-thermometer-half"></i>32.5 °C</p>
           </div>
         </div>
         <div class="humi-con">
           <div class="humi-text">
-            <p>Humidity</p>
-            <div class="humi-value-box">
-              <i class="fas fa-tint"></i>
-              <div>36.7 %</div>
-            </div>
+            <p class="humi-title">Humidity</p>
+            <p class="humi"><i class="fas fa-tint"></i>36.7 %</p>
           </div>
         </div>
       </div>
-
     </div>
 
 
