--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <i class="fas fa-clock" style="color: rgb(126, 126, 126); font-size: 14px;"></i>
         </div>
         <div class="head-con-text">11:36, 05/05/2021</div>
-        <a class="refresh">
+        <a class="refresh" href="/">
           <i class="fas fa-sync-alt" style="font-size: 22px;"></i>
         </a>
       </div>
