--- a/index.html
+++ b/index.html
@@ -28,10 +28,15 @@
     <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-database.js"></script>
 
-    
+    <!-- Auto Refresh Webpage Script -->
+    <script type = "text/JavaScript">
+         function AutoRefresh( t ) {
+            setTimeout("location.reload(true);", t);
+         }
+   </script>
   </head>
 
-  <body>
+  <body onload = "JavaScript:AutoRefresh(45000);">
     <!-- Navigation Bar -->
     <div class="topnav" id="myTopnav">
       <a href="https://www.aerogroup1992.com/" target="_blank" id="logoLink"><img src="img/aerog-logo.png" alt="Aero Group 1992 Logo" id="logo"></a>
