--- a/report.html
+++ b/report.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
 
     <title>Digital Farming</title>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script> 
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/navbar.css" rel="stylesheet">
@@ -79,15 +79,27 @@
       </div>
 
       <!-- Temperature Graph -->
+      
+    <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-analytics.js"></script>
 
-
-      <!-- Humidity Graph -->
-
-
-      <!-- Export to Excel -->
-
-    </div>
-
+    <script>
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyB5zraDdpuRbVhHC0pekc9hKrKfteX0ncE",
+      authDomain: "digital-farming-52edb.firebaseapp.com",
+      databaseURL: "https://digital-farming-52edb-default-rtdb.asia-southeast1.firebasedatabase.app",
+      projectId: "digital-farming-52edb",
+      storageBucket: "digital-farming-52edb.appspot.com",
+      messagingSenderId: "1054001690174",
+      appId: "1:1054001690174:web:8a665041773bc078c1436f",
+      measurementId: "G-WYRKFCRBYV"
+    };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+      firebase.analytics();
+      const db = firebase.database();
+    </script>
+    
     <script src="js/index.js"></script>
     <script>
       function resNavBar() {
@@ -99,5 +111,15 @@
         }
       }
     </script>
+    <div>
+      <canvas id="myChart"></canvas>
+    </div>
+    <script src="js/chart.js"></script>
+    <!-- Humidity Graph -->
+
+
+    <!-- Export to Excel -->
+
+  </div>
   </body>
 </html>
