added excel export field

--- a/report.html
+++ b/report.html
@@ -85,6 +85,11 @@
 
 
       <!-- Export to Excel -->
+      <div class="export-con">
+        <i class="far fa-file-excel excel-icon"></i>
+        <div class="ex-title">3 Months Data Collection Table</div>
+        <button class="ex-btn">Excel</button>
+      </div>
 
     </div>
 
