fixed export to excel

--- a/report.html
+++ b/report.html
@@ -95,7 +95,7 @@
         <i class="far fa-file-excel excel-icon"></i>
         <div class="ex-title">3 Months Data Collection Table</div>
         <button class="ex-btn" id="ex-btn">Excel</button>
-        <table class="table2excel" id="table2excel" style="display: none;">
+        <table class="table2excel" id="table2excel" style="display: none;" data-cols-width="20,50,20,20">
           <tr>
             <th>Device Name</th>
             <th>Date and Time</th>
