--- a/report.html
+++ b/report.html
@@ -112,12 +112,14 @@
       }
     </script>
     <div>
-      <canvas id="myChart"></canvas>
+      <canvas id="temperatureChart"></canvas>
+    </div>
+    
+    <!-- Humidity Graph -->
+    <div>
+      <canvas id="humidityChart"></canvas>
     </div>
     <script src="js/chart.js"></script>
-    <!-- Humidity Graph -->
-
-
     <!-- Export to Excel -->
 
   </div>
