--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <i class="fas fa-clock" style="color: rgb(126, 126, 126); font-size: 14px;"></i>
         </div>
         <div class="head-con-text" id="lastTime"></div>
-        <a class="refresh" href="/">
+        <a class="refresh" href="../">
           <i class="fas fa-sync-alt" style="font-size: 22px;"></i>
         </a>
       </div>
@@ -125,6 +125,12 @@
           x.className = "topnav";
         }
       }
+    </script>
+    <script>
+      let device = document.querySelector('#devices-con')
+      device.addEventListener("click", e => {
+        window.location.href = "../report.html";
+      });
     </script>
   </body>
 </html>
