--- a/report.html
+++ b/report.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
+
     <title>Digital Farming</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script> 
 
@@ -28,6 +27,8 @@
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-database.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/gh/linways/table-to-excel@v1.0.4/dist/tableToExcel.js"></script>
 
     <!-- Auto Refresh Webpage Script -->
     <script type = "text/JavaScript">
@@ -109,7 +110,6 @@
 
 
     <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-analytics.js"></script>
-
     <script>
     // For Firebase JS SDK v7.20.0 and later, measurementId is optional
     const firebaseConfig = {
@@ -128,6 +128,7 @@
       const db = firebase.database();
     </script>
     
+    <!-- <script src="js/index.js"></script> -->
     <script src="js/report.js"></script>
     <script>
       function resNavBar() {
@@ -139,9 +140,22 @@
         }
       }
     </script>
-  
+    
     <script src="js/chart.js"></script>
 
-  </div>
+    <!-- Export HTML Table to Excel Script -->
+    <script>
+      let button = document.querySelector("#ex-btn");
+
+      button.addEventListener("click", e => {
+        let table = document.querySelector("#table2excel");
+        TableToExcel.convert(table, {
+          name: "3months-report.xlsx",
+          sheet: {
+            name: "Sheet 1"
+          }
+        });
+      });
+    </script>
   </body>
 </html>
