--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <i class="fas fa-clock" style="color: rgb(126, 126, 126); font-size: 14px;"></i>
         </div>
         <div class="head-con-text" id="lastTime"></div>
-        <a class="refresh" href="/">
+        <a class="refresh" onclick="location.reload(true)">
           <i class="fas fa-sync-alt" style="font-size: 22px;"></i>
         </a>
       </div>
