--- a/report.html
+++ b/report.html
@@ -62,7 +62,7 @@
           <i class="fas fa-clock" style="color: rgb(126, 126, 126); font-size: 14px;padding-left: 10px;"></i>
         </div>
         <div class="head-con-text" id="lastTime"></div>
-        <a class="refresh" href="../report.html">
+        <a class="refresh" onclick="location.reload(true)">
           <i class="fas fa-sync-alt" style="font-size: 22px;"></i>
         </a>
       </div>
