added go back button

--- a/report.html
+++ b/report.html
@@ -65,6 +65,9 @@
         <a class="refresh" onclick="location.reload(true)">
           <i class="fas fa-sync-alt" style="font-size: 22px;"></i>
         </a>
+        <a class="goBack" href="./">
+          <i class="fas fa-arrow-left" style="font-size: 22px;"></i>
+        </a>
       </div>
 
       <div class="devi-block">
@@ -80,14 +83,9 @@
         </div>
       </div>
 
-      <!-- Temperature Graph -->
+      <!-- Temperature & Humidity Graph -->
       <div>
         <canvas id="temperatureChart"></canvas>
-      </div>
-
-      <!-- Humidity Graph -->
-      <div>
-        <canvas id="humidityChart"></canvas>
       </div>
 
       <!-- Export to Excel -->
