disable auto refresh report page

--- a/report.html
+++ b/report.html
@@ -37,8 +37,8 @@
          }
    </script>
   </head>
-
-  <body onload = "JavaScript:AutoRefresh(45000);">
+  <!-- <body onload = "JavaScript:AutoRefresh(45000);"> -->
+  <body>
     <!-- Navigation Bar -->
     <div class="topnav" id="myTopnav">
       <a href="https://www.aerogroup1992.com/" target="_blank" id="logoLink"><img src="img/aerog-logo.png" alt="Aero Group 1992 Logo" id="logo"></a>
