--- a/index.html
+++ b/index.html
@@ -53,8 +53,11 @@
     <!-- Main Container -->
     <div class="container">
       <div class="head-con">
-        <div class="head-con-text" style="padding-left: 0;" id="allDevices"></div>
-        <div style="float: left; padding: 20px 0;">
+        <div class="connectedIcon" style="font-size: 28px;">
+          <i class="fas fa-plug"></i>
+        </div>
+        <div class="head-con-text" id="allDevices"></div>
+        <div class="clockIcon">
           <i class="fas fa-clock" style="color: rgb(126, 126, 126); font-size: 14px;"></i>
         </div>
         <div class="head-con-text" id="lastTime"></div>
