--- a/report.html
+++ b/report.html
@@ -79,7 +79,11 @@
           </div>
         </div>
       </div>
-
+      <div>
+        <button onclick="dayData()">Day Data</button> 
+        <button onclick="weekData()">Week Data</button> 
+        <button onclick="monthData()">Month Data</button>
+      </div>
       <!-- Temperature Graph -->
       <div>
         <canvas id="temperatureChart"  width="800px" height="400px"></canvas>
@@ -103,9 +107,8 @@
           </tr>
         </table>
       </div>
-      <button onclick="dayData()">Day Data</button> 
-      <button onclick="weekData()">Week Data</button> 
-      <button onclick="monthData()">Month Data</button> 
+      
+      
     </div>
 
 
