--- a/report.html
+++ b/report.html
@@ -78,7 +78,11 @@
       <button onclick="dayData()">Day Data</button> 
       <button onclick="weekData()">Week Data</button> 
       <button onclick="monthData()">Month Data</button> 
+
+      <label>Date</label>
+        <input type="date"></input>
       <div>
+
         <canvas id="temperatureChart"  width="800px" height="400px"></canvas>
       </div>
       
