--- a/report.html
+++ b/report.html
@@ -75,12 +75,13 @@
       </div>
 
       <!-- Analytics Graph -->
-      <button onclick="dayData()">Day Data</button> 
-      <button onclick="weekData()">Week Data</button> 
-      <button onclick="monthData()">Month Data</button> 
+        <button onclick="dayData()">Day Data</button> 
+        <button onclick="weekData()">Week Data</button> 
+        <button onclick="monthData()">Month Data</button> 
 
-      <label>Date</label>
-        <input type="date"></input>
+        Date:<input id="date" type="date" name="task_date" />
+        <!--Time:<input id="time" type="time" name="task_time" /> -->
+        <button id="calc">Get Time</button>
       <div>
 
         <canvas id="temperatureChart"  width="800px" height="400px"></canvas>
