--- a/report.html
+++ b/report.html
@@ -79,7 +79,7 @@
         <button onclick="weekData()">Week Data</button> 
         <button onclick="monthData()">Month Data</button> 
 
-        Date:<input id="date" type="date" name="task_date" />
+        Date:<input id="date" type="date" name="task_date">
         <!--Time:<input id="time" type="time" name="task_time" /> -->
         <button id="calc">Get Time</button>
       <div>
