--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 
     <script src="ie-emulation-modes-warning.js"></script>
 
- 
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3"></script>
+    <script src="https://cdn.jsdelivr.net/npm/hammerjs@2.0.8"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@0.7.7"></script>
     <link href="carousel.css" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/b5b314d8c8.js" crossorigin="anonymous"></script>
