--- a/report.html
+++ b/report.html
@@ -95,6 +95,7 @@
           <button onclick="weekData()" class="timeDuration" id="weekDuration">1 w</button> 
           <button onclick="dayData()" class="timeDuration" id="dayDuration">1 d</button> 
         </div>
+        <button id="resetZoom">Reset Zoom</button>
       </div>
 
       <div>
