fixed BG when export graph

--- a/report.html
+++ b/report.html
@@ -109,7 +109,7 @@
         <button id="resetZoom">Reset Zoom</button>
       </div>
 
-      <div id="reportPage">
+      <div id="reportPage" style="background-color: none;">
         <canvas id="temperatureChart"  width="800px" height="400px"></canvas>
       </div>
       
