fixed client is offline

--- a/report.html
+++ b/report.html
@@ -195,7 +195,7 @@
       let show = document.getElementById('showTable');
       let tblCon = document.querySelector('.tbl-con');
       let tbl = document.getElementById('table2excel');
-      renderDataTable();
+      // renderDataTable();
       show.addEventListener("click", e => {
         if (tbl.style.display === "none") {
           tblCon.style.display = "inline-block";
