--- a/report.html
+++ b/report.html
@@ -111,6 +111,7 @@
           <button onclick="dayData()" class="timeDuration" id="dayDuration">1 d</button> 
           <button onclick="weekData()" class="timeDuration" id="weekDuration">1 w</button> 
           <button onclick="monthData()" class="timeDuration" id="monthDuration">1 m</button>
+          <button onclick="allData()" class="timeDuration" id="monthDuration">all</button> 
           <button id="resetZoom" class="timeDuration"><i class="fas fa-redo-alt"></i></button>
         </div>
       </div>
