--- a/report.html
+++ b/report.html
@@ -146,7 +146,10 @@
           </table>
         </div>
       </div>
-      
+
+      <div id="reportPage" style="background-color: none;">
+        <canvas id="compareChart"  width="800px" height="400px"></canvas>
+      </div>
 
     </div>
     <!-- End of Main Container -->
