--- a/report.html
+++ b/report.html
@@ -67,7 +67,7 @@
         </div>
         <div class="head-con-text" id="lastTime"></div>
         <div class="dropdown">
-          <button onclick="dropdownExport()" class="dropbtn"><i class="fas fa-file-download"></i></button>
+          <i class="fas fa-file-download dropbtn" onclick="dropdownExport()"></i>
           <div id="myDropdown" class="dropdown-content">
             <a id="graphPdf">Graph (PDF)</a>
             <a id="dataPdf">Data Table (PDF)</a>
