--- a/report.html
+++ b/report.html
@@ -70,8 +70,8 @@
           <i class="fas fa-file-download dropbtn" onclick="dropdownExport()"></i>
           <div id="myDropdown" class="dropdown-content">
             <a id="graphPdf">Graph (PDF)</a>
-            <a id="dataPdf">Data Table (PDF)</a>
-            <a id="dataCsv">Data Table (CSV)</a>
+            <a id="dataPdf">Data (PDF)</a>
+            <a id="dataCsv">Data (XLSX)</a>
           </div>
         </div>
         <a class="refresh" onclick="location.reload(true)">
