--- a/report.html
+++ b/report.html
@@ -32,7 +32,7 @@
     <script src="https://cdn.jsdelivr.net/gh/linways/table-to-excel@v1.0.4/dist/tableToExcel.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment.min.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3"></script>
     <script src="https://cdn.jsdelivr.net/npm/hammerjs@2.0.8"></script>
@@ -72,8 +72,8 @@
           <i class="fas fa-file-download dropbtn" onclick="dropdownExport()"></i>
           <div id="myDropdown" class="dropdown-content">
             <a id="graphPdf">Graph (PDF)</a>
-            <a id="dataPdf">Data (PDF)</a>
-            <a id="dataCsv">Data (XLSX)</a>
+            <a id="dataPdf">Data Table (PDF)</a>
+            <a id="dataCsv">Data Table (CSV)</a>
           </div>
         </div>
         <a class="refresh" onclick="location.reload(true)">
