--- a/report.html
+++ b/report.html
@@ -148,7 +148,8 @@
         </div>
       </div>
 
-       <div id="reportPage" style="background-color: none;">
+      <div id="reportPage" style="background-color: none;">
+        <button id="resetZoom2" class="timeDuration"><i class="fas fa-redo-alt"></i></button>
         <canvas id="compareChart"  width="800px" height="400px"></canvas>
       </div>
 
