make dynamic data table

--- a/report.html
+++ b/report.html
@@ -143,13 +143,18 @@
                 <th>Humidity (%RH)</th>
               </tr>
             </thead>
-
+            <tbody id="tbl-body">
+            </tbody>
           </table>
         </div>
       </div>
 
        <div id="reportPage" style="background-color: none;">
         <canvas id="compareChart"  width="800px" height="400px"></canvas>
+      </div>
+
+      <div id="myScroll">
+
       </div>
 
     </div>
