--- a/index.html
+++ b/index.html
@@ -100,8 +100,10 @@
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
       firebase.analytics();
+      // firebase.firestore().enablePersistence();
 
       const db = firebase.database();
+      //FirebaseDatabase.getInstance().setPersistenceEnabled(true);
     </script>
     
     <script src="js/index.js"></script>
