--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="img/aerog-logo.png">
+    <link rel="icon" href="img/leaf-icon.png">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script> 
     <title>Digital Farming</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
@@ -43,7 +43,7 @@
   <body onload = "JavaScript:AutoRefresh(45000);">
     <!-- Navigation Bar -->
     <div class="topnav" id="myTopnav">
-      <a href="https://www.aerogroup1992.com/" target="_blank" id="logoLink"><img src="img/aerog-logo.png" alt="Aero Group 1992 Logo" id="logo"></a>
+      <a href="https://www.aerogroup1992.com/" target="_blank" id="logoLink"><img src="img/leaf-icon.png" alt="Aero Group 1992 Logo" id="logo"></a>
       <a href="/" id="digiFarming">IoT Digital Farming</a>
       <a href="#monitor" id="monitoring" class="active">Monitoring</a>
       <a href="#" class="angleLeft" style="float: right; margin: 26px 0;"><i class="fas fa-angle-left"></i></a>
