--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
    </script>
   </head>
 
-  <body onload = "JavaScript:AutoRefresh(45000);">
+  <body>
     <!-- Navigation Bar -->
     <div class="topnav" id="myTopnav">
       <a href="/" id="logoLink"><img src="img/leaf-icon.png" alt="Aero Group 1992 Logo" id="logo"></a>
