--- a/index.html
+++ b/index.html
@@ -88,23 +88,23 @@
     <script>
     // For Firebase JS SDK v7.20.0 and later, measurementId is optional
     const firebaseConfig = {
-      apiKey: "AIzaSyAr3ZGs6nEdPB3lC1TtqeEIfrhnK2XO060",
+      /*apiKey: "AIzaSyAr3ZGs6nEdPB3lC1TtqeEIfrhnK2XO060",
       authDomain: "iot-digital.firebaseapp.com",
       databaseURL: "https://iot-digital-default-rtdb.asia-southeast1.firebasedatabase.app",
       projectId: "iot-digital",
       storageBucket: "iot-digital.appspot.com",
       messagingSenderId: "629848329523",
       appId: "1:629848329523:web:d965041a327a06ae3f4246",
-      measurementId: "G-PC06B29EVX"
+      measurementId: "G-PC06B29EVX"*/
       
-      /*apiKey: "AIzaSyB5zraDdpuRbVhHC0pekc9hKrKfteX0ncE",
+      apiKey: "AIzaSyB5zraDdpuRbVhHC0pekc9hKrKfteX0ncE",
       authDomain: "digital-farming-52edb.firebaseapp.com",
       databaseURL: "https://digital-farming-52edb-default-rtdb.asia-southeast1.firebasedatabase.app",
       projectId: "digital-farming-52edb",
       storageBucket: "digital-farming-52edb.appspot.com",
       messagingSenderId: "1054001690174",
       appId: "1:1054001690174:web:8a665041773bc078c1436f",
-      measurementId: "G-WYRKFCRBYV"*/
+      measurementId: "G-WYRKFCRBYV"
     };
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
