added version text

--- a/report.html
+++ b/report.html
@@ -48,7 +48,7 @@
     <!-- Navigation Bar -->
     <div class="topnav" id="myTopnav">
       <a href="/" target="_blank" id="logoLink"><img src="img/leaf-icon.png" alt="Aero Group 1992 Logo" id="logo"></a>
-      <a href="/" id="digiFarming">IoT Digital Farming</a>
+      <a href="/" id="digiFarming">IoT Digital Farming<div class="vText">v2.0</div></a>
       <a href="#monitor" id="monitoring" class="active">Monitoring</a>
       <a href="#" class="angleLeft" style="float: right; margin: 26px 0;"><i class="fas fa-angle-left"></i></a>
       <a href="#device" id="device"></a>
@@ -167,7 +167,9 @@
         <button id="resetZoom2" class="timeDuration"><i class="fas fa-redo-alt"></i></button>
         <button onclick="compareChartTem()" class="timeDuration" id="dayDuration">Tem</button> 
         <button onclick="compareChartHumi()" class="timeDuration" id="dayDuration">Humi</button> 
-        <canvas id="compareChart"  width="800px" height="400px"></canvas>
+
+          <canvas id="compareChart"  width="800px" height="400px"></canvas>
+
       </div>
 
     </div>
