--- a/report.html
+++ b/report.html
@@ -162,7 +162,7 @@
           <label for="date_now">Start:</label>
           <input id="date_now" type="date" name="task_date" />
           <!--Time:<input id="time" type="time" name="task_time" /> -->
-          <button onclick="get()" class="getTimeBtn">Get Now</button>
+          <button onclick="compareGraphSet()" class="getTimeBtn">Get Now</button>
         </div>
         <canvas id="compareChart"  width="800px" height="400px"></canvas>
       </div>
